--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
             <nav class="header-nav">
                 <a href="./index.html" class="logo-accent link">Web<span class="header-logo">Studio</span></a>
                 <ul class="nav-list list">
-                    <li><a class="header-nav-link current link " href="./index.html">Studio</a></li>
+                    <li><a class="header-nav-link current link" href="./index.html">Studio</a></li>
                     <li><a class="header-nav-link link" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="header-nav-link link" href="">Contacts</a></li>
                 </ul>
+                <button class="header-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="icon-humburger" width="32" height="22">
+                        <use href="./images/icons.svg#icon-hamburger-open"></use>
+                    </svg>
+                </button>
             </nav>
             <address class="header-contact">
                 <ul class="header-contact-list list">
@@ -56,7 +61,7 @@
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-list-title list-title">Strategy</h3>
+                        <h3 class="advantages-list-title ">Strategy</h3>
                         <p class="advantages-list-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
@@ -66,7 +71,7 @@
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-list-title list-title">Punctuality</h3>
+                        <h3 class="advantages-list-title">Punctuality</h3>
                         <p class="advantages-list-text">Bring the key message to the brand's audience for the best price
                             within the shortest possible
                             time.</p>
@@ -77,7 +82,7 @@
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-list-title list-title">Diligence</h3>
+                        <h3 class="advantages-list-title">Diligence</h3>
                         <p class="advantages-list-text">Research and confirm brands that present the strongest digital
                             growth opportunities and minimize
                             risk.</p>
@@ -88,7 +93,7 @@
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="advantages-list-title list-title">Technologies</h3>
+                        <h3 class="advantages-list-title">Technologies</h3>
                         <p class="advantages-list-text">Design practice focused on digital experiences. We bring forth a
                             deep passion for
                             problem-solving.</p>
@@ -101,23 +106,28 @@
                 <h2 class="expertise-title title">What are we doing</h2>
                 <ul class="expertise-list list">
                     <li class="expertise-list-item"><img class="expertise-list-img"
-                            src="./images/featuresImages/img-1.jpg" alt="display" width="360" height="300"></li>
+                            srcset="./images/features_Images/img-1.jpg 1x, ./images/features_Images/img-1@2x.jpg 2x"
+                            src="./images/features_Images/img-1.jpg" alt="display" width="360" height="300"
+                            loading="lazy"></li>
                     <li class="expertise-list-item"><img class="expertise-list-img"
-                            src="./images/featuresImages/img-2.jpg" alt="several phone desktops" width="360"
-                            height="300">
+                            srcset="./images/features_Images/img-2.jpg 1x, ./images/features_Images/img-2@2x.jpg 2x"
+                            src="./images/features_Images/img-2.jpg" alt="several phone desktops" width="360"
+                            height="300" loading="lazy">
                     </li>
                     <li class="expertise-list-item"><img class="expertise-list-img"
-                            src="./images/featuresImages/img-3.jpg" alt="smartphone in a man`s hand" width="360"
-                            height="300"></li>
+                            srcset="./images/features_Images/img-3.jpg 1x, ./images/features_Images/img-3@2x.jpg 2x"
+                            src="./images/features_Images/img-3.jpg" alt="smartphone in a man`s hand" width="360"
+                            height="300" loading="lazy"></li>
                 </ul>
             </div>
         </section>
-        <section class="team section">
+        <section class="team-section section">
             <div class="container">
                 <h2 class="team-title title">Our Team</h2>
                 <ul class="team-list list">
                     <li class="team-list-item">
-                        <img class="team-list-img" src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264">
+                        <img class="team-list-img" srcset="./images/team/img-1.jpg 1x, ./images/team/img-1@2x.jpg 2x"
+                            src="./images/team/img-1.jpg" alt="Mark Guerrero" width="264" loading="lazy">
                         <div class="team-card-container">
                             <h3 class="team-list-title list-title">Mark Guerrero</h3>
                             <p class="team-list-text">Product Designer</p>
@@ -159,7 +169,8 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img class="team-list-img" src="./images/team/img-2.jpg" alt="Tom Ford" width="264">
+                        <img class="team-list-img" srcset="./images/team/img-2.jpg 1x, ./images/team/img-2@2x.jpg 2x"
+                            src="./images/team/img-2.jpg" alt="Tom Ford" width="264" loading="lazy">
                         <div class="team-card-container">
                             <h3 class="team-list-title list-title">Tom Ford</h3>
                             <p class="team-list-text">Frontend Developer</p>
@@ -201,7 +212,8 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img class="team-list-img" src="./images/team/img-3.jpg" alt="Camila Garcia" width="264">
+                        <img class="team-list-img" srcset="./images/team/img-3.jpg 1x, ./images/team/img-3@2x.jpg 2x"
+                            src="./images/team/img-3.jpg" alt="Camila Garcia" width="264" loading="lazy">
                         <div class="team-card-container">
                             <h3 class="team-list-title list-title">Camila Garcia</h3>
                             <p class="team-list-text">Marketing</p>
@@ -243,7 +255,8 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img class="team-list-img" src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264">
+                        <img class="team-list-img" srcset="./images/team/img-4.jpg 1x, ./images/team/img-4@2x.jpg 2x"
+                            src="./images/team/img-4.jpg" alt="Daniel Wilson" width="264" loading="lazy">
                         <div class="team-card-container">
                             <h3 class="team-list-title list-title">Daniel Wilson</h3>
                             <p class="team-list-text">UI Designer</p>
@@ -387,7 +400,6 @@
 
             </div>
             <div class="form-container">
-
                 <p class="footer-title">Subscribe</p>
                 <form class="footer-form" name="footer-form">
                     <label class="footer-form-label" for="footer-input-subcription">
@@ -474,6 +486,65 @@
             </form>
         </div>
     </div>
+
+    <div class="mobile-menu-container js-menu-container" id="mobile-menu">
+        <button class="mobile-close-btn js-close-menu" type="button">
+            <svg class="icon-humburger" width="8" height="8">
+                <use href="./images/icons.svg#modal-close-icon"></use>
+            </svg>
+        </button>
+        <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item"><a class="mobile-menu-link current link" href="./index.html">Studio</a></li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a></li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
+        </ul>
+
+        <address class="mobile-menu-contact">
+            <ul class="mobile-menu-contact-list list">
+                <li><a class="mobile-menu-contact-link phone link" href="tel:+110001111111" target="_blank"
+                        rel="nofollow noopener">+11 (000) 111-11-11</a></li>
+                <li><a class="mobile-menu-contact-link  email link" href="mailto:info@devstudio.com" target="_blank"
+                        rel="nofollow noopener">info@devstudio.com</a>
+                </li>
+            </ul>
+        </address>
+        <ul class="social-links mobile-social-links list">
+            <li class="social-link">
+                <a class="social-link-item" href="http://instagram.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-link">
+                <a class="social-link-item" href="http://twitter.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-link">
+                <a class="social-link-item" href="http://facebook.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-link">
+                <a class="social-link-item" href="http://linkedin.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
 </body>
 
