--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,11 @@
                     <li><a class="header-nav-link current link" href="./portfolio.html">Portfolio</a></li>
                     <li><a class="header-nav-link link" href="">Contacts</a></li>
                 </ul>
+                <button class="header-btn js-open-menu" type="button" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg class="icon-humburger" width="32" height="22">
+                        <use href="./images/icons.svg#icon-hamburger-open"></use>
+                    </svg>
+                </button>
             </nav>
             <address class="header-contact">
                 <ul class="header-contact-list list">
@@ -257,7 +262,6 @@
 
             </div>
             <div class="form-container">
-
                 <p class="footer-title">Subscribe</p>
                 <form class="footer-form" name="footer-form">
                     <label class="footer-form-label" for="footer-input-subcription">
@@ -275,6 +279,63 @@
             </div>
         </div>
     </footer>
+    <div class="mobile-menu-container js-menu-container" id="mobile-menu">
+        <button class="mobile-close-btn js-close-menu" type="button">
+            <svg class="icon-humburger" width="8" height="8">
+                <use href="./images/icons.svg#modal-close-icon"></use>
+            </svg>
+        </button>
+        <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./index.html">Studio</a></li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link current link" href="./portfolio.html">Portfolio</a></li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
+        </ul>
+
+        <address class="mobile-menu-contact">
+            <ul class="mobile-menu-contact-list list">
+                <li><a class="mobile-menu-contact-link phone link" href="tel:+110001111111" target="_blank"
+                        rel="nofollow noopener">+11 (000) 111-11-11</a></li>
+                <li><a class="mobile-menu-contact-link  email link" href="mailto:info@devstudio.com" target="_blank"
+                        rel="nofollow noopener">info@devstudio.com</a>
+                </li>
+            </ul>
+        </address>
+        <ul class="social-links mobile-social-links list">
+            <li class="social-link">
+                <a class="social-link-item" href="http://instagram.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-link">
+                <a class="social-link-item" href="http://twitter.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-link">
+                <a class="social-link-item" href="http://facebook.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="social-link">
+                <a class="social-link-item" href="http://linkedin.com" target="_blank" rel="noopener no-referrer">
+                    <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+
+    </div>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 
 </html>
