--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,11 @@
                 </ul>
                 <ul class="portfolio-list list">
                     <li class="portfolio-list-item">
-
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-1.jpg" alt="Banking App " width="360" height="300">
+                                <img srcset="./images/portfolio/img-1.jpg 1x , ./images/portfolio/img-1@2x.jpg 2x"
+                                    src="./images/portfolio/img-1.jpg" alt="Banking App " width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -78,8 +79,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-2.jpg" alt="Cashless Payment " width="360"
-                                    height="300">
+                                <img srcset="./images/portfolio/img-2.jpg 1x , ./images/portfolio/img-2@2x.jpg 2x"
+                                    src="./images/portfolio/img-2.jpg" alt="Cashless Payment " width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -96,7 +98,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-3.jpg" alt="Meditation App" width="360" height="300">
+                                <img srcset="./images/portfolio/img-3.jpg 1x , ./images/portfolio/img-3@2x.jpg 2x"
+                                    src="./images/portfolio/img-3.jpg" alt="Meditation App" width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -112,7 +116,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-4.jpg" alt="Taxi Service" width="360" height="300">
+                                <img srcset="./images/portfolio/img-4.jpg 1x , ./images/portfolio/img-4@2x.jpg 2x"
+                                    src="./images/portfolio/img-4.jpg" alt="Taxi Service" width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -129,8 +135,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-5.jpg" alt="Screen Illustrations" width="360"
-                                    height="300">
+                                <img srcset="./images/portfolio/img-5.jpg 1x , ./images/portfolio/img-5@2x.jpg 2x"
+                                    src="./images/portfolio/img-5.jpg" alt="Screen Illustrations" width="360"
+                                    height="300" loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -146,7 +153,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-6.jpg" alt="Online Courses" width="360" height="300">
+                                <img srcset="./images/portfolio/img-6.jpg 1x , ./images/portfolio/img-6@2x.jpg 2x"
+                                    src="./images/portfolio/img-6.jpg" alt="Online Courses" width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -163,8 +172,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360"
-                                    height="300">
+                                <img srcset="./images/portfolio/img-7.jpg 1x , ./images/portfolio/img-7@2x.jpg 2x"
+                                    src="./images/portfolio/img-7.jpg" alt="Instagram Stories Concept" width="360"
+                                    height="300" loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -180,7 +190,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-8.jpg" alt="Organic Food" width="360" height="300">
+                                <img srcset="./images/portfolio/img-8.jpg 1x , ./images/portfolio/img-8@2x.jpg 2x"
+                                    src="./images/portfolio/img-8.jpg" alt="Organic Food" width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -196,7 +208,9 @@
                     <li class="portfolio-list-item">
                         <a class="portfolio-link link" href="">
                             <div class="portfolio-overlay">
-                                <img src="./images/portfolio/img-9.jpg" alt="Fresh Coffee" width="360" height="300">
+                                <img srcset="./images/portfolio/img-9.jpg 1x , ./images/portfolio/img-9@2x.jpg 2x"
+                                    src="./images/portfolio/img-9.jpg" alt="Fresh Coffee" width="360" height="300"
+                                    loading="lazy">
                                 <p class="overlay-text">
                                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                                     Tracker
@@ -287,7 +301,8 @@
         </button>
         <ul class="mobile-menu-list list">
             <li class="mobile-menu-item"><a class="mobile-menu-link link" href="./index.html">Studio</a></li>
-            <li class="mobile-menu-item"><a class="mobile-menu-link current link" href="./portfolio.html">Portfolio</a></li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link current link" href="./portfolio.html">Portfolio</a>
+            </li>
             <li class="mobile-menu-item"><a class="mobile-menu-link link" href="">Contacts</a></li>
         </ul>
 
